[metadata]
name = coral_credits
summary = Django API for managing resources in a fixed capacity cloud.
description-file =
    README.md
author = Tyler Christie
author-email = tyler@stackhpc.com
url = https://github.com/stackhpc/coral-credits.git
python-requires = >=3.9

[files]
packages =
    coral_credits